source/sass/_player.sass
/* THE PLAYER */

.the-fucking-player 
	width: 20px
	height: 20px
	position: relative
	left: 300px
	top: 300px
	background: url(../img/player-down.png) no-repeat
	background-size: contain !important
 
.player-direction-up  
	background: url(../img/player-up.png) no-repeat  

.player-direction-down  
	background: url(../img/player-down.png) no-repeat 

.player-direction-left  
	background: url(../img/player-left.png) no-repeat  

.player-direction-right  
	background: url(../img/player-right.png) no-repeat  

.player-direction-up-sword  
	background: url(../img/player-up-sword.png) no-repeat  

.player-direction-down-sword  
	background: url(../img/player-down-sword.png) no-repeat 

.player-direction-left-sword  
	background: url(../img/player-left-sword.png) no-repeat  

.player-direction-right-sword  
	background: url(../img/player-right-sword.png) no-repeat  

.player-direction-up-sword-swing  
	background: url(../img/player-up-sword-swing.png) no-repeat 

.player-direction-down-sword-swing  
	background: url(../img/player-down-sword-swing.png) no-repeat 

.player-direction-left-sword-swing  
	background: url(../img/player-left-sword-swing.png) no-repeat 

.player-direction-right-sword-swing  
	background: url(../img/player-right-sword-swing.png) no-repeat  

.player-direction-up-shovel  
	background: url(../img/player-up-shovel.png) no-repeat  

.player-direction-down-shovel  
	background: url(../img/player-down-shovel.png) no-repeat 

.player-direction-left-shovel  
	background: url(../img/player-left-shovel.png) no-repeat 

.player-direction-right-shovel  
	background: url(../img/player-right-shovel.png) no-repeat  

.player-direction-up-shovel-swing  
	background: url(../img/player-up-shovel-swing.png) no-repeat  

.player-direction-down-shovel-swing  
	background: url(../img/player-down-shovel-swing.png) no-repeat 

.player-direction-left-shovel-swing  
	background: url(../img/player-left-shovel-swing.png) no-repeat  

.player-direction-right-shovel-swing  
	background: url(../img/player-right-shovel-swing.png) no-repeat  

.player-direction-up-axe  
	background: url(../img/player-up-axe.png) no-repeat  

.player-direction-down-axe  
	background: url(../img/player-down-axe.png) no-repeat 

.player-direction-left-axe  
	background: url(../img/player-left-axe.png) no-repeat 

.player-direction-right-axe  
	background: url(../img/player-right-axe.png) no-repeat  

.player-direction-up-axe-swing  
	background: url(../img/player-up-axe-swing.png) no-repeat  

.player-direction-down-axe-swing  
	background: url(../img/player-down-axe-swing.png) no-repeat 

.player-direction-left-axe-swing  
	background: url(../img/player-left-axe-swing.png) no-repeat 

.player-direction-right-axe-swing  
	background: url(../img/player-right-axe-swing.png) no-repeat  

.player-direction-up-bike  
	background: url(../img/player-up-bike.png) no-repeat  

.player-direction-down-bike  
	background: url(../img/player-down-bike.png) no-repeat 

.player-direction-left-bike  
	background: url(../img/player-left-bike.png) no-repeat  

.player-direction-right-bike  
	background: url(../img/player-right-bike.png) no-repeat  

.player-direction-up-skiis  
	background: url(../img/player-up-skiis.png) no-repeat 

.player-direction-down-skiis  
	background: url(../img/player-down-skiis.png) no-repeat 

.player-direction-left-skiis  
	background: url(../img/player-left-skiis.png) no-repeat 

.player-direction-right-skiis  
	background: url(../img/player-right-skiis.png) no-repeat  

.player-direction-up-canoe  
	background: url(../img/player-up-canoe.png) no-repeat 

.player-direction-down-canoe  
	background: url(../img/player-down-canoe.png) no-repeat 

.player-direction-left-canoe  
	background: url(../img/player-left-canoe.png) no-repeat 

.player-direction-right-canoe  
	background: url(../img/player-right-canoe.png) no-repeat  

.player-direction-up-car  
	background: url(../img/player-up-car.png) no-repeat  

.player-direction-down-car  
	background: url(../img/player-down-car.png) no-repeat 

.player-direction-left-car  
	background: url(../img/player-left-car.png) no-repeat  

.player-direction-right-car  
	background: url(../img/player-right-car.png) no-repeat  

.player-direction-up-rocket  
	background: url(../img/player-up-rocket.png) no-repeat  

.player-direction-down-rocket  
	background: url(../img/player-down-rocket.png) no-repeat  

.player-direction-left-rocket  
	background: url(../img/player-left-rocket.png) no-repeat  

.player-direction-right-rocket  
	background: url(../img/player-right-rocket.png) no-repeat  

